# vala-calculator

./: LICENSE  README.md  calculator.rc  com.blogspot.bitwalk.json  com.blogspot.bitwalk.json~  meson.build  mingw64.ini  resource.h  vala-calculator.vala
src/: calc.rc  meson.build  vala-calculator.vala
